# audio-assistant

./: '  CHANGELOG.md  Makefile  README.md  cabal.project.freeze  default.nix  player.cabal  record.sh  talk.sh  test.json  vad-audio.cabal
app/: Actions.hs  ConfigParser.hs  Guess.hs  Listener.hs  Main.hs  MatchHelper.hs  RecordAudio.hs  RecordNote.hs  Reminders.hs  SayDateTime.hs  SendAudio.hs  SendEmail.hs  SpeechApi.hs  SpokenNumbers.hs  TriggerWindow.hs  VoiceDetectionSliceReader.hs  WeatherFetcher.hs
lib/: ChatLogger.hs  ChatLoggerSchema.hs  DavinciApi.hs  Guess.hs  OllamaApi.hs  OllamaResponseChunker.hs  RecordNote.hs  Reminders.hs  SayDateTime.hs  SendEmail.hs  SpeechApi.hs  WeatherFetcher.hs
scripts/: osx-record.sh  osx-talk.sh  record.sh  talk.sh
tests/: ConduitTests.hs  Tests.hs
