cabal-version:      3.6
name:               vad-audio
version:            0.1.0.0
with-compiler:      ghc-9.2.2
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
extra-lib-dirs: /opt/homebrew/lib/
extra-include-dirs: /opt/homebrew/include/

executable vad-audio
    main-is:       Main.hs
    ghc-options: -threaded -rtsopts
    other-modules: SendAudio,
                   Actions,
                   SpeechApi,
                   SayDateTime,
                   Listener,
                   Guess,
                   ConfigParser,
                   RecordAudio,
                   RecordNote,
                   MatchHelper,
                   WeatherFetcher,
                   SendEmail

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      mtl,
                      hsndfile,
                      conduit,
                      conduit-audio-samplerate,
                      conduit-audio,
                      conduit-audio-lame,
                      conduit-audio-sndfile,
                      webrtc-vad,
                      vector,
                      aeson,
                      req,
                      http-client,
                      time,
                      timezone-olson,
                      timezone-series,
                      text,
                      process,
                      containers,
                      pcre-heavy,
                      string-conversions,
                      random,
                      directory,
                      optparse-applicative,
                      unix,
                      scientific,
                      mime-mail,
                      HaskellNet,
                      HaskellNet-SSL
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:  QuasiQuotes, FlexibleContexts
