cabal-version:      3.6
name:               vad-audio
version:            0.1.0.0
with-compiler:      ghc-9.2.2
synopsis:
    a voice assistant

description:
    A voice assistant for basic tasks, listens and segments audio using voice activity detection


-- The license under which the package is released.
-- license:

author:
    Jim Snavely

maintainer:
    ludflu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
extra-lib-dirs: /opt/homebrew/lib/
extra-include-dirs: /opt/homebrew/include/

executable vad-audio
    main-is:       Main.hs
    ghc-options: -threaded -rtsopts
    other-modules: SendAudio,
                   Actions,
                   SpeechApi,
                   SayDateTime,
                   Listener,
                   Guess,
                   ConfigParser,
                   RecordAudio,
                   RecordNote,
                   MatchHelper,
                   WeatherFetcher,
                   SendEmail,
                   VoiceDetectionSliceReader,
                   DavinciApi,
                   Reminders

    build-depends:    base,
                      mtl,
                      hsndfile,
                      conduit,
                      conduit-audio-samplerate,
                      conduit-audio,
                      conduit-audio-lame,
                      conduit-audio-sndfile,
                      webrtc-vad,
                      vector,
                      aeson,
                      req,
                      http-client,
                      time,
                      timezone-olson,
                      timezone-series,
                      text,
                      process,
                      containers,
                      pcre-heavy,
                      string-conversions,
                      random,
                      directory,
                      optparse-applicative,
                      unix,
                      scientific,
                      mime-mail,
                      HaskellNet,
                      HaskellNet-SSL,
                      retry,
                      safe-exceptions,
                      directory,
                      monad-loops
		              
    hs-source-dirs:   app, lib
    default-language: Haskell2010
    default-extensions:  QuasiQuotes, FlexibleContexts

test-suite vad-tests
  type: exitcode-stdio-1.0
  other-modules: Listener
  hs-source-dirs:
      tests,
      app
  main-is: Tests.hs
  build-depends:
      base >= 4.7 && < 5,
      mtl,
      hsndfile,
      conduit,
      conduit-audio-samplerate,
      conduit-audio,
      conduit-audio-lame,
      conduit-audio-sndfile,
      webrtc-vad,
      vector,
      aeson,
      req,
      http-client,
      time,
      timezone-olson,
      timezone-series,
      text,
      process,
      containers,
      pcre-heavy,
      string-conversions,
      random,
      directory,
      optparse-applicative,
      unix,
      scientific,
      mime-mail,
      HaskellNet,
      HaskellNet-SSL,
      tasty,
      tasty-hunit

